--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://heyitschun.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://heyitschun.com/">
+<link rel="canonical" href="https://heyitschun.com/">
