--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to http://heyitschun.com/</title>
-<meta http-equiv="refresh" content="0; URL=http://heyitschun.com/">
-<link rel="canonical" href="http://heyitschun.com/">
+<meta http-equiv="refresh" content="0; URL=https://heyitschun.com/">
+<link rel="canonical" href="https://heyitschun.com/">
